# ideal-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  portfolio.py  pyproject.toml
example_portfolio/: _categories.csv  _history.csv  _ideal_portfolio.csv  crypto.csv  stock.csv
utils/: assets_breakdown.py  current_asset_value.py  format_ideal_portfolio.py  load_positions.py  orders.py  plot_evolution.py
