[tool.poetry]
name = "ideal-portfolio"
version = "0.1.0"
description = ""
authors = ["SomeOne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
pre-commit = "^3.6.2"
yfinance = "^0.2.37"
argparse = "^1.4.0"
treelib = "^1.7.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
