[project]
name = "ideal-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
yfinance = "^0.2.58"
rich = "^14.0.0"
treelib = "^1.7.1"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
